--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -23,6 +23,8 @@ html
 		link(rel="stylesheet" type="text/css" href="/styles/slick/slick.css")
 		link(rel="stylesheet" type="text/css" href="/styles/slick/slick-theme.css")
 		script(src='https://use.fontawesome.com/b2a273c68b.js')
+		script(src='/js/d3/d3.v3.min.js')
+		script(src='/js/d3pie/d3pie.min.js')
 
 		//- This file provides the default styling for the KeystoneJS Content Editor
 		if user && user.canAccessKeystone
@@ -167,6 +169,7 @@ html
 		script(src='/js/bootstrap/bootstrap-3.3.5.min.js')
 		script(type="text/javascript" src="/styles/slick/slick.min.js")
 		script(src='/js/slider.js')
+		script(src='/js/d3/d3.js')
 
 		//- The KeystoneJS Content Editor provides support for ks-editable data attributes,
 		//- which generate links to edit content for users who can access Keystone
