--- a/public/styles/elearning/elearning.less
+++ b/public/styles/elearning/elearning.less
@@ -1,6 +1,7 @@
 body {
-    padding-top: 120px;
+    padding-top: 80px;
     background-color: rgba(250,250,250,1);
+    padding-bottom: 120px;
 }
 
 /*
@@ -60,4 +61,56 @@ body {
              -o-object-fit: cover;
                 object-fit: cover;
     }
+}
+
+.elearning-body {
+  /*margin-top: 85px;*/
+  /*130 to accomodate main header (logo + links) and blue community header*/
+  margin-top: 130px;
+}
+
+#elearning-nav {
+  margin-top: 85px;
+  height: 45px;
+  background-color:#3062B7;
+
+}
+
+.elearning-breadcrumb {
+  background-color: unset;
+  padding: 10px 15px 9px 15px;
+  float: left;
+}
+
+.elearning-breadcrumb li a {
+  color: #FBFBFB;
+  text-transform: uppercase;
+}
+
+.elearning-breadcrumb li a:hover {
+  color: #c3d8f7;
+}
+
+.elearning-breadcrumb li:last-child {
+  color: #FBFBFB;
+  text-transform: uppercase;
+}
+
+#user-login-links {
+  float: right;
+  padding: 10px 15px 9px 15px;
+  color: #FBFBFB;
+}
+
+.login-link {
+  color: #FBFBFB;
+}
+
+.login-link:hover {
+  color: #c3d8f7;
+}
+
+
+.container.margin-top {
+  margin-top: 20px;
 }
