Added static graph for the analytics of comments

--- a/templates/views/elearning/analytics.jade
+++ b/templates/views/elearning/analytics.jade
@@ -44,7 +44,9 @@ mixin Comments()
       .col-md-6.col-xs-6
         div(id="commentsGraph")
       .col-md-3.col-xs-6
+        div(id="maxCommentsGraph")
       .col-md-3.col-xs-6
+        //to do again
 //mixin Views(views)
   h4.text Views
   h5= views
