Update videos section

--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -93,6 +93,13 @@ block content
 				.col-md-3.no-padding
 					iframe(src='https://www.youtube.com/embed/ChOu6IDu-KQ', frameborder='0', allowfullscreen='')
 
+				.col-md-3.no-padding
+					iframe(src='https://www.youtube.com/embed/FSPh8O5XNnk', frameborder='0', allowfullscreen='')
+				.col-md-3.no-padding
+					iframe(src='https://www.youtube.com/embed/KAqJAaKtzn8', frameborder='0', allowfullscreen='') 
+				.col-md-3.no-padding
+					iframe(src='https://www.youtube.com/embed/UNl-JyJQPKM', frameborder='0', allowfullscreen='')
+
 	#fiesta_block.fh5co-project-style-3.container
 		.row
 			.col-md-12
