--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -23,7 +23,7 @@ html
 		link(rel="stylesheet" type="text/css" href="/styles/slick/slick.css")
 		link(rel="stylesheet" type="text/css" href="/styles/slick/slick-theme.css")
 		script(src='https://use.fontawesome.com/b2a273c68b.js')
-		script(src='/js/d3/d3.v3.min.js')
+		script(src='/js/d3/d3.min.js')
 		script(src='/js/d3pie/d3pie.min.js')
 
 		//- This file provides the default styling for the KeystoneJS Content Editor
