edited layout template and added breadcrumbs

--- a/templates/layouts/elearning.jade
+++ b/templates/layouts/elearning.jade
@@ -83,7 +83,7 @@ html
       
       //- NAVBAR
       div#community-nav.navbar-fixed-top
-        //- ol.breadcrumb.community-breadcrumb
+        ol.breadcrumb.community-breadcrumb
           li
             a(href="/") Home
           each breadcrumb in breadcrumbs
