--- a/templates/views/elearning/main.jade
+++ b/templates/views/elearning/main.jade
@@ -1,4 +1,4 @@
-extends ../../layouts/default
+extends ../../layouts/elearning
 
 block css
 //-   link(rel="stylesheet" type="text/css" href="/styles/elearning/elearning.css")
