--- a/templates/views/elearning/analytics.jade
+++ b/templates/views/elearning/analytics.jade
@@ -38,15 +38,37 @@ mixin Reactions(maxreactions, minreactions)
         hr
         div(id="minReactionsPieChart")
 
-mixin Comments()
+mixin Comments(recentComment1, recentComment2)
   h4.text Comments
   .row
       .col-md-6.col-xs-6
         div(id="commentsGraph")
       .col-md-3.col-xs-6
-        div(id="maxCommentsGraph")
+        .thumbnail
+          if recentComment1.thumbnail.exists
+            img.card-img-top(src=recentComment1.thumbnail alt="recentComment1.title")
+          else if recentComment1.videoId
+            img.card-img-top(src='https://img.youtube.com/vi/'+ recentComment1.videoId +'/mqdefault.jpg', height="130px")
+          else
+            img.card-img-top(src="/images/image-not-available-th.png" alt=recentComment1.title, height="130px")
+          .caption
+            .row
+              h4= recentComment1.title.substring(0, 50)
+        hr
+        div(id="recentCommentGraph")
       .col-md-3.col-xs-6
-        //to do again
+        .thumbnail
+          if recentComment2.thumbnail.exists
+            img.card-img-top(src=recentComment2.thumbnail alt="recentComment2.title")
+          else if recentComment2.videoId
+            img.card-img-top(src='https://img.youtube.com/vi/'+ recentComment2.videoId +'/mqdefault.jpg', height="130px")
+          else
+            img.card-img-top(src="/images/image-not-available-th.png" alt=recentComment2.title, height="130px")
+          .caption
+            .row
+              h4= recentComment2.title.substring(0, 50)
+        hr
+        div(id="recentCommentGraph2")
 //mixin Views(views)
   h4.text Views
   h5= views
@@ -59,7 +81,7 @@ block content
         +Reactions(data.maxReactionsLearningObject, data.minReactionsLearningObject)
     .panel.panel-default
       .panel-body
-        +Comments()
+        +Comments(data.recentLOComment1, data.recentLOComment2)
     //.panel.panel-default
       .panel-body
         +Views(data.views)
@@ -67,3 +89,4 @@ block content
   script(src='/js/maxLearningObjectReactions.js')
   script(src='/js/minLearningObjectReactions.js')
   script(src='/js/learningObjectComments.js')
+  script(src='/js/recentLOComment.js')
