--- a/templates/views/elearning/signup.jade
+++ b/templates/views/elearning/signup.jade
@@ -1,27 +1,33 @@
 extends ../../layouts/elearning
 
-
+block js
+  //- script.
+    $('#signupForm').validator();
+  
 block signup 
+  
   form.contact-form(method="post")
     .row      
-      input(type="hidden", name="action", value="user.create")
+      input(type='hidden', name='action',  value='user.signup')
       .form-group
         label.control-label Name
         .row
           .col-xs-6.col-md-6
             input.form-control.input-box(type='text', name='first', value=formData.first, placeholder='First Name')
+            
           .col-xs-6.col-md-6
             input.form-control.input-box(type='text', name='last', value=formData.last, placeholder='Last Name')
+        
       .form-group
         label.control-label Email
         .row
           .col-xs-6.col-md-12
             input.form-control.input-box(type='email', name='email', value=formData.email, placeholder='Email')
-      .form-group
+      //- .form-group
         label.control-label Address
         .row
           .col-xs-6.col-md-12
-            input.form-control.input-box(type='text', name='address', value=formData.address, placeholder='Address')
+            input.form-control.input-box(type='text', name='address', placeholder='Address' value=formData.address )
       .form-group
         label.control-label Password
         .row
@@ -33,8 +39,8 @@ block signup
     .row.pull-right
       button(type='submit').btn.btn-primary Sign Up
 
+
 block content
-  .elearning-body
     .container
       .row
         .col-xs-12.col-md-6.col-md-offset-3
@@ -43,5 +49,4 @@ block content
               if user
                 p You are already logged in.
               else
-                p Fill form in order to sign up.
                 block signup
