--- a/templates/views/signin.jade
+++ b/templates/views/signin.jade
@@ -1,4 +1,6 @@
-extends ./../layouts/elearning
+extends ../../layouts/elearning
+
+block js
 
 block signin
   form.contact-form(method="post")
@@ -8,54 +10,23 @@ block signin
         label.control-label Email
         .row
           .col-xs-6.col-md-12
-            input.form-control-input-box(type='email', name='email', value=formData.email, placeholder='Email')
+            input.form-control.input-box(type='email', name='email', value=formData.signin_email, placeholder='Email')
       .form-group
         label.control-label Password
-          .col-xs-6.col-md-12
-            input.form-control-input-box(type='password', name='password', value=formData.email, placeholder='Password')
+        .row
+          .col-xs-6.col-md-6
+            input.form-control.input-box(type='password', name='password', value=formData.signin_password, placeholder='Password')
     hr
     .row.pull-right
       button(type='submit').btn.btn-primary Sign In
-  
-  //- p.text-center
-    a(href='/forgot-password') Forgot your password?
-
 
 block content
-  .elearning-body
-    .container
-      .row
-        .col-xs-12.col-md-6.col-md-offset-3
-          .panel.panel-default
-            .pale-body
-              if user
-                p You are already logged in.
-              else
-                block signin
-
-block js
-  script.
-    var $form = $('.signin-form');
-    var $submit = $form.find("[type='submit']");
-
-    $submit.click( function() {
-      $submit.addClass( 'disabled' );
-    });
-
-    $form.find("input[type!='hidden']").first().focus();
-
-    $('.js-toggle-join').click( function() {
-      $('.join-form').show();
-      //- $('.join-form').show().find("input[type!='hidden']").first().focus();
-      $('.signin-form').hide();
-      $('.js-toggle-signin').show();
-      $('.js-toggle-join').hide();
-    });
-
-    $('.js-toggle-signin').click( function() {
-      $('.signin-form').show();
-      //- $('.signin-form').show().find("input[type!='hidden']").first().focus();
-      $('.join-form').hide();
-      $('.js-toggle-join').show();
-      $('.js-toggle-signin').hide();
-    });
+  .container
+    .row
+      .col-xs-12.col-md-6.col-md-offset-3
+        .panel.panel-default
+          .panel-body
+            if user
+              p You are already logged in.
+            else
+              block signin
