Removed links to publication page for now

--- a/templates/views/eresources/eresources.jade
+++ b/templates/views/eresources/eresources.jade
@@ -14,11 +14,11 @@ block content
             hr.clear
             .row
               each publication in publications
-                .col-md-2
-                  a(href="/eresources/publication/"+publication._id)
-                    img(src=publication._.cover.fit(100, 180, {}))
-                    br
-                    | #{publication.get('title.trunc')}
+                .col-xs-4.col-md-2
+                  //- a(href="/eresources/publication/"+publication._id)
+                  img(src=publication._.cover.fit(100, 180, {}))
+                  br
+                  | #{publication.get('title.trunc')}
               .col-xs-12.more-link
                 a(href="/eresources/publications") More Publications
 
