Removed 'More Links' for now

--- a/templates/views/eresources/eresources.jade
+++ b/templates/views/eresources/eresources.jade
@@ -49,4 +49,4 @@ block content
                       a(href=link.url) #{link.name}
                     .description #{link.description}
               .col-xs-12.more-link
-                a(href="/eresources/links") More Links
+                //- a(href="/eresources/links") More Links
