Added getting the current year for the analytics

--- a/templates/views/elearning/courseOutline.jade
+++ b/templates/views/elearning/courseOutline.jade
@@ -113,5 +113,5 @@ block content
         else
           +currentCourse-list(data.currCourse)
       .panel-footer
-        p.text-right.
+        //- p.text-right.
          Author: #{data.currCourse.author.name.last},  #{data.currCourse.author.name.first}
