Added adding views to learning object viewed

--- a/public/styles/elearning/elearning.less
+++ b/public/styles/elearning/elearning.less
@@ -68,6 +68,11 @@ body {
   /*130 to accomodate main header (logo + links) and blue community header*/
   margin-top: 100px;
 }
+.analytics-body {
+  /*margin-top: 85px;*/
+  /*130 to accomodate main header (logo + links) and blue community header*/
+  margin-top: 30px;
+}
 
 #elearning-nav {
   margin-top: 85px;
