--- a/templates/views/elearning/elearning.jade
+++ b/templates/views/elearning/elearning.jade
@@ -111,4 +111,4 @@ block content
     .container
       .panel.panel-default
         .panel-body
-          +recommended(learningObjects)
+          +recommended(data.recommendedLearningObjects)
