Reworked publications page

--- a/templates/views/eresources/publications.jade
+++ b/templates/views/eresources/publications.jade
@@ -76,3 +76,23 @@ block content
               li.list-group-item.list-group-item-header Commodities
               each commodity in commodities
                 a.list-group-item #{commodity.name}
+
+        //- .col-xs-12.col-md-9.pub-pager
+        //-   nav(aria-label='...')
+        //-     ul.pagination
+        //-       li.disabled
+        //-         a(href='#', aria-label='Previous')
+        //-           span(aria-hidden='true') «
+        //-       li.active
+        //-         a(href='#')
+        //-           | 1
+        //-           span.sr-only (current)
+        //-       li
+        //-         a(href="#") 2
+        //-       li
+        //-         a(href="#") 3
+        //-       li
+        //-         a(href='#', aria-label='Next')
+        //-           span(aria-hidden='true') »
+
+
