Added the less file for elearning

--- a/templates/views/elearning/analytics.jade
+++ b/templates/views/elearning/analytics.jade
@@ -2,6 +2,7 @@ extends ../../layouts/default
 
 block css
   link(rel="stylesheet" type="text/css" href="/styles/analytics.css")
+  link(rel="stylesheet" type="text/css" href="/styles/elearning/elearning.less")
 
 //block js
   script(src='/js/d3/d3.min.js')
