Reverted exhibit models and views

--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -11,7 +11,7 @@ block content
 
 
 	//- Dynamic Slider from the database
-	#carousel.container(style="margin-top:100px; margin-bottom:40px;").no-padding
+	#top-page(style="margin-top:100px; margin-bottom:40px;").container.no-padding
 		#myCarousel.carousel.slide(data-ride='carousel')
 			//- Carousel indicators were declared here
 			ol.carousel-indicators
