edited comment module

--- a/templates/views/elearning/learningObject.jade
+++ b/templates/views/elearning/learningObject.jade
@@ -2,12 +2,34 @@ extends ../../layouts/elearning
 
 block js
   script.
-    function checkSubmit(e){
-      if(e && e.keyCode == 13)
-        document.commentForm.submit();
-        document.commentForm.clear();
-    }
-    //- document.commentForm.submit();
+    jQuery(function($) {
+      
+      var comments = $('#comments');
+      var input = $('.comment-field-input');
+      var submit = comments.find('button[type=submit]');
+
+      
+      // Scroll to comments and focus input field
+      function scrollToComments(e) {
+        
+        e.preventDefault();
+        
+        $('html, body').animate({ scrollTop: comments.offset().top }, 250);
+        
+        input.eq(0).focus();
+      }
+      $('[href="#comments"]').click( scrollToComments );
+      
+      // Check if field has content: enable/disable submit. Disable by default
+      submit.attr('disabled','disabled');
+      input.keyup(function() {
+        if ($.trim($(this).val())) {
+          submit.removeAttr('disabled');
+        } else {
+          submit.attr('disabled','disabled');
+        }
+      });
+    });
 
 mixin learningObject(currLO)
   .container-fluid
@@ -66,18 +88,46 @@ mixin otherTopics(otherLO)
           h5=lo.title
           span= lo.content.brief.substring(0, 50)
 
-block addComment
-  form.contact-form(method="post" name="commentForm")
-    .row
-      input(type="hidden" name="action" value="user.addComment")
-      .form-group
-        .row
-          input.form-control(type="text" name="content" placeholder="Write a comment..." value=formData.content)
-        div(onKeyPress="return checkSubmit(event)")
-        //- input(type="submit" style="display:none")
-    //- .row.pull-right       
-      button(type="submit").btn.btn-primary 
-        span.glyphicon.glyphicon-comment(aria-hidden="true")
+mixin comment-form(action)
+  form(method='post', style="margin-bottom: 40px; margin-top: 40px;")
+    input(type='hidden', name='action', value='comment.create')
+    .media
+      .pull-left
+        if user
+          //- img(src=user.photo.exists ? user._.photo.thumbnail(80,80) : 'http://placehold.it/80x80', alt=user.name.full, width=80, height=80).img-rounded
+        else
+          img(src='http://placehold.it/80x80', alt='Comment author placeholder', width=80, height=80).img-rounded
+      .media-body
+        textarea(name='content', placeholder=user ? 'Leave a comment...' : 'Please sign in to comment', disabled=!user, style="margin-bottom: 10px; min-height: 80px; resize: vertical;").form-control
+        if user
+          button(type='submit').btn.btn-primary.pull-right Add Comment
+        else
+          ul.list-inline
+            li: a(href='/keystone/signin').btn.btn-sm.btn-primary Sign in to Comment
+
+mixin comment-post(comment)
+  if comment.author
+    div(id='comment-id-' + comment.id, style="margin-top: 20px;")
+      .media
+        .pull-left
+          //- img(src=comment.author.photo.exists ? comment.author._.photo.thumbnail(80,80) : 'http://placehold.it/80x80', alt=comment.author.name.full, width=80, height=80).img-rounded
+        .media-body
+          p.list-group-item-heading
+            strong= comment.author.name.full
+            if user && user.id === comment.author.id
+              |  &middot; 
+              a(href='?remove=comment&comment=' + comment.id, title='Delete this comment', rel='tooltip', data-placement='left').comment-delete.js-delete-confirm Delete
+          p.list-group-item-text=comment.content.replace(/\n/g, '<br>')
+
+mixin comment-thread(comments)
+  label Comments
+  if comments.length
+    ul.list-group
+    for comment in comments
+      li.list-group-item
+        +comment-post(comment)
+
+
 
 mixin viewComments(comments)
   label Comments
@@ -90,6 +140,9 @@ mixin viewComments(comments)
             p #{comment.content}
             footer #{comment.author.name.first} #{comment.author.name.last} on #{comment.dateCreated.toDateString()}
 
+
+
+
 block content
   .container
     .row
@@ -97,9 +150,10 @@ block content
         .row
           .panel.panel-info
             .panel-body
-              +learningObject(data.currLO)
-              +viewComments(data.comments)
-              block addComment
+              +learningObject(currentLO)
+              +comment-form()
+              +comment-thread(comments)
+              //- block addComment
               
           //- .panel-footer
             p.text-info.text-right Author: #{data.currLO.author.name.last}, #{data.currLO.author.name.first}
