--- a/public/styles/elearning/elearning.less
+++ b/public/styles/elearning/elearning.less
@@ -1,7 +1,7 @@
 body {
-    padding-top: 80px;
+    padding-top: 85px;
     background-color: rgba(250,250,250,1);
-    padding-bottom: 120px;
+    //padding-bottom: 120px;
 }
 
 /*
