--- a/templates/layouts/elearning.jade
+++ b/templates/layouts/elearning.jade
@@ -65,7 +65,7 @@ html
               li: a(class="not-active" onclick="toggleButton()")
                 i.fa.fa-search#toggleIcon
               li: a(href='#', class="not-active")
-                button#versionbutton ALPHA VERSION
+                button#versionbutton ALPHA
 
               //- if user
               //-   if user.canAccessKeystone
