--- a/templates/views/elearning/analyticsLO.jade
+++ b/templates/views/elearning/analyticsLO.jade
@@ -3,6 +3,26 @@ extends ../../layouts/elearning-analytics
 block css
   link(rel="stylesheet" type="text/css" href="/styles/analytics.css")
 
+mixin Views(currentLO, numViews, numComments, numReactions)
+  .row
+    .col-md-6.col-xs-6
+      div(id="loViewsGraph")
+    .col-md-6.col-xs-6
+      .well.well-sm.centered-panel
+        |  TOTAL NUMBER OF VIEWS: 
+        span= numViews
+      .well.well-sm.centered-panel
+        |  TOTAL NUMBER OF COMMENTS: 
+        span= numComments
+      .well.well-sm.centered-panel
+        |  TOTAL NUMBER OF REACTIONS: 
+        span= numReactions
+  .row
+    .col-md-6.col-xs-6
+      div(id="loCommentsGraph")
+    .col-md-6.col-xs-6
+      div(id="loReactionsGraph")
+
 block content
   .analytics-body
     .row
@@ -23,4 +43,16 @@ block content
                 li.active
                   a(href='/elearning/analytics/learning-objects/allindustries') Analytics by Learning Objects
       .col-md-9.col-sm-4.dashboard
-        h3= data.currentLO.title
+        .row
+          .media
+            .media-left
+              if data.currentLO.thumbnail.exists
+                img(src=data.currentLO._.thumbnail.limit(100, 100) alt=data.currentLO.video.title).img-rounded
+              else
+                img(src="/images/image-not-available.png", alt=data.currentLO.title, height="100px", weight="100px").img-rounded
+            .media-body
+              h5=data.currentLO.title
+              span= data.currentLO.author
+              span= data.currentLO.content.brief.substring(0, 50)
+        +Views(data.currentLO, data.numViews, data.numComments, data.numReactions)
+  script(src='/js/elearning-graphs/eachLOAnalytics.js')
